# Claude-MCP-Bridge

./: .env.example  .gitignore  CLAUDE_PROJECT_MCP_BRIDGE.md  pyproject.toml
scripts/: setup.sh  test_connection.sh
src/mcp_bridge/: audit.py  auth.py  config.py  oauth_provider.py  rate_limiter.py  sandbox.py  server.py
src/mcp_bridge/tools/: __init__.py  claude_execute.py  file_ops.py  gpu_status.py  project_status.py  run_command.py  system_info.py
systemd/: mcp-bridge.service
tests/: test_auth.py  test_sandbox.py  test_tools.py
